--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
   font-family: 'plusJakarta';
   src: url('./assets/fonts/PlusJakartaSans-VariableFont_wght.ttf')
 }
+@font-face {
+  font-family: "plusJakatraSans";
+  src: url("./assets/fonts/PlusJakartaSans-VariableFont_wght.ttf");
+}
 
 body {
   background-color:  hsl(210, 60%, 98%);
